--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,17 +17,49 @@
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
-    <body onload="getUser({{user_id}});">
+    <body>
         {% block body %} 
             {% block header %}
                 <header>
-                    <!--Template Header -->
+                    <div class="user">
+                        <img src="/images/{{ user.image }}" />
+                        <span class="name">{{user.name}} {{user.surname}}</span> 
+                    </div>
                 </header>
             {% endblock %}
 
             {% block sidebar %}
                 <div id="sidebar">
-                
+                    <a href="{{ path('PlanItUserBundle_homepage', { 'id': user.id }) }}"><div id="logo">PLAN <span class="blue">IT</span></div></a>
+                    <div id="search">
+                        <form>
+                          <input name="search" type="search" class="search" placeholder="Rechercher">
+                          <input type="submit" value="Find" class="go">
+                        </form>
+                    </div>
+                    <div class="user">
+                        <img  src="/images/{{ user.image }}"/>
+                        <span class="name">{{user.name}} {{ user.surname }}</span> 
+                        <span class="counter-event">{{ user.events|length }} événements cours</span>
+                    </div>
+                    {% block navigation %}
+                        <ul id="menu">
+                            <li class="events"><a href="{{ path('PlanItUserBundle_homepage', { 'id': user.id }) }}">Evénements</a></li>
+                            <ul class="events" id="accordion">
+                                {% for event in user.events %}
+                                    <li class="active event">{{event.name}}</li>
+                                    <ul class="modules">
+                                        <li><a href="{{ path('PlanItEventBundle_event', { 'id': event.id }) }}">Général</a></li>
+                                        {% for module in event.modules %}
+                                            <li><a href="{{ path('PlanItModuleBundle_module', { 'event_id': event.id, 'module_id':module.id }) }}">{{module.name}}</a></li>
+                                        {% endfor %}
+                                    </ul>
+                                {% endfor %}
+                            </ul>
+                            <li class="account"><a href="#"> Mon compte </a></li>
+                            <li class="last help"><a href="#"> Aide </a></li>
+                        </ul>
+                    {% endblock %}
                 </div>
             {% endblock %}
 
@@ -49,11 +81,6 @@
             <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
             <script src="//code.highcharts.com/highcharts.js"></script>
             <script src="//code.highcharts.com/modules/exporting.js"></script>
-            {% javascripts "../app/Resources/views/templates/header.html.twig"
-            "../app/Resources/views/templates/sidebar.html.twig"
-               filter="twig_js, ?yui_js" %}
-                <script language="javascript" src="{{ asset_url }}"></script>
-            {% endjavascripts %}
           
             <script src="{{ asset('js/bootstrap.min.js') }}"></script>
             <script src="{{ asset('js/selectize.js') }}"></script>
@@ -62,6 +89,8 @@
             %}
             <script type="text/javascript" src="{{ asset_url }}"></script>
             {% endjavascripts %}
+
+            <script>accordeon();</script>
         {% endblock %}
     </body>
 </html>
