--- a/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
@@ -20,7 +20,7 @@
 			<div class="col-md-4" id="infos"> 
 				<div class="info_dte">
 					<img src="/images/event/info_dte_zzz.png" /> 
-					<p> NOMBRE DE DODOS </br> <span>days</span> </p>
+					<p> NOMBRE DE DODOS </br> <span> {{ event.beginDate | offsetDate() }}</span> </p>
 				</div>
 				<div class="info_dte">
 					<img src="/images/event/info_dte_invite.png" /> 
