--- a/src/PlanIt/UserBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/Page/index.html.twig
@@ -23,9 +23,9 @@
 				<a href="{{ path('PlanItEventBundle_event', { 'id': event.id }) }}" class="event_button">
 					<div class="event-thumbnail">
 						<div class="head">
-							<h2>{{event.name}}</h2>
-							{# <span class="date"> {{ event.begin_date}}</span> #}
-							<span class="date"> {{'J-5'| trans}} </span>
+							<h2>{{event.name |truncate(15)}}</h2>
+							 <span class="date"> {{ event.beginDate | offsetDate() }}</span>
+							{#<span class="date"> {{'J-5'| trans}} </span>#}
 						</div>
 						<div class="content">
 							<div class="image-cropper">
