--- a/src/PlanIt/PlaceBundle/Resources/views/templates/list.html.twig
+++ b/src/PlanIt/PlaceBundle/Resources/views/templates/list.html.twig
@@ -1,7 +1,7 @@
 {% twig_js name="list" %}
 {% for place in module.places%}
 <div>
-	<input type="checkbox" class="check" id="check" onClick="chosePlace({{place.id}})" {% if place.state == 1 %} checked {% endif %}>
+	<input type="radio" class="check" id="check" onClick="chosePlace({{place.id}})" {% if place.state == 1 %} checked {% endif %}>
 </div>
 <div id="head_list" class="head-list accordion-head {% if place.state == 1 %} checked {% endif %}">	
 	<div class="name"><input type="text" id="name-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.name}}"></div>
