--- a/src/PlanIt/TodoBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/TodoBundle/Resources/views/Page/index.html.twig
@@ -10,9 +10,9 @@
 		<div class="col-md-12"> </div>
 	</div>
 
-	<div class="row">
-        <div class="col-md-3 bt_todo"><button data-toggle="modal" data-target=".addItemModal">Ajouter une tâche</button></div>
-        <div class="col-md-3 bt_todo"><a href="/app_dev.php/todo-pdf/{{module_id}}">Imprimer la liste des tâches</a></div>
+	<div class="row buttons">
+        <div class="col-md-3 col-sm-5 bt_todo"><button data-toggle="modal" data-target=".addItemModal">Ajouter une tâche</button></div>
+        <div class="col-md-3 col-sm-5 bt_todo"><a href="/app_dev.php/todo-pdf/{{module_id}}"><button>Imprimer la liste des tâches</button></a></div>
         <!--<div class="col-md-3 bt_todo"><button>Valider</button></div>-->
     </div>
      {{ render(controller('PlanItTodoBundle:Item:form', { 'module_id' : module_id } ))}}
