--- a/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
@@ -72,10 +72,14 @@
 			@include box-shadow(0px,2px,2px,-2px,#1c1c1c);
 			color: #dddddd;
 			list-style: none;
-			padding: 9px 0 9px 40px;
+			/*padding: 9px 0 9px 40px;*/
+			height: 36px;
 			font: 14px 'PT Sans';
 			cursor: pointer;
 			a {
+				display: block;
+				height: 36px;
+				padding: 9px 0 0 40px;
 				color: #dddddd;
 				font: 14px 'PT Sans';
 				text-decoration: none;
@@ -97,6 +101,8 @@
 		li.event {
 			background: url('/images/picto-menu.png') no-repeat;
 			background-position: 98% -135px;
+			padding: 9px 25px 9px 40px;
+			height: auto !important;
 			@include border-radius(0); 
 			&:hover,
 			&.open {
