--- a/src/PlanIt/UserBundle/Resources/views/templates/events.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/templates/events.html.twig
@@ -1,6 +1,6 @@
 {% twig_js name="events" %}
 {% for event in user_events %}
-	<div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
+	<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 		<a href="/app_dev.php/event/{{event.id}}" class="event_button">
 			<div class="event-thumbnail">
 				<div class="head">
